# PortableRunner

./: LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-lock.yaml~0a9c07bdbb42c91e90329eeff184a02ce5bab240
cli/: Cargo.toml
cli/src/: main.rs
env/: Cargo.toml
env/src/: lib.rs
gui/: README.md  package.json
gui/sample/: .gitignore  readme.md
gui/sample/portable_env/: HostEnv.bat
gui/sample/portable_env/.home/: .env.bat  .pd.json  .profile.bat  .profile.java.bat
gui/sample/portable_env/.home/.bin/: hello.bat  jd-gui.bat  run-bat.vbs
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
src/: App.css  App.tsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/libs/: config.rs  lnk.rs  mod.rs  profile.rs  utils.rs
src/libs/: apis.js  apis.ts  extensions.js  utils.js  utils.ts
src/mods/: Init.module.css  Init.module.tsx  Main.module.css  Main.module.tsx  Temp.module.css  Temp.module.tsx  init.js  main.js  temp.js
src/mods/coms/: CmdItem.component.tsx
