[package]
name = "portable_runner"
version = "0.1.3"
description = "Mount the portable directory as a consistent user directory. Then, based on this user directory, run your program."
authors = ["kerwin612 <kerwin612@qq.com>"]
license = "MIT"
repository = "https://github.com/kerwin612/PortableRunner"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mount_dir = "0.0.4"
random-string = "1.0.0"
lnk = "0.5.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-notification = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
