[package]
name = "portable_desktop_gui"
version = "0.0.1"
authors = ["kerwin612 <kerwin612@qq.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
portable_desktop_env = { path = "../../env" }
serde_json = "1.0.96"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
