[package]
name = "portable_runner_gui"
version = "0.0.7"
authors = ["kerwin612 <kerwin612@qq.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
portable_runner_env = { path = "../../env" }
serde_json = "1.0.96"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
